--- a/tempApp/package.json
+++ b/tempApp/package.json
@@ -14,6 +14,9 @@
     "apisauce": "^2.1.1",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-background-actions": "^2.6.2",
+    "react-native-background-fetch": "^2.0.8",
+    "react-native-background-task": "^0.2.1",
     "react-native-progress-circle": "^2.1.0"
   },
   "devDependencies": {
